# CytoTable-benchmarks

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: arrow-benchmarks.yml
notebooks/: Untitled.py  arrow_analysis.ipynb  arrow_analysis.py  create_example_data.ipynb  create_example_data.py  cytotable_and_pandas_analysis_csv.ipynb  cytotable_and_pandas_analysis_csv.py  cytotable_and_pycytominer_analysis.ipynb  cytotable_and_pycytominer_analysis.py  cytotable_and_pycytominer_analysis_sqlite.ipynb  cytotable_and_pycytominer_analysis_sqlite.py  cytotable_looped_memory_usage.ipynb  cytotable_looped_memory_usage.py  cytotable_objgraph.ipynb  cytotable_objgraph.py  duckdb_analysis.ipynb  duckdb_analysis.py  duckdb_looped_memory_usage.ipynb  duckdb_looped_memory_usage.py  parquet_analysis.ipynb  parquet_analysis.parquet  parquet_analysis.py  pyarrow_looped_memory_usage.ipynb  utilities.py
notebooks/cytotable-issue-187/: explore_floating_point_precision.ipynb  explore_floating_point_precision.py  readme.md
notebooks/cytotable-issue-75/: cytotable_looped_memory_usage.ipynb  cytotable_looped_memory_usage.py  cytotable_objgraph.ipynb  cytotable_objgraph.py  pyarrow_looped_memory_usage.py  readme.md
notebooks/examples/: cytotable_convert_examplehuman_multiprocess_csv.py  cytotable_convert_examplehuman_multithread_csv.py  cytotable_convert_nf1_multiprocess.py  cytotable_convert_nf1_multiprocess_sqlite.py  cytotable_convert_nf1_multithread.py  cytotable_convert_nf1_multithread_sqlite.py  loop_cytotable_memory_one.py  loop_cytotable_memory_two.py  pandas_merge_examplehuman_csv.py  pyarrow_parquet_reads_malloc.py  pycytominer_merge_nf1.py  pycytominer_merge_nf1_sqlite.py
